--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:431924738418:ios:1d9cabd004f9907fc985eb",
-  "FIREBASE_PROJECT_ID": "roomdecordatabase-43368",
-  "GCM_SENDER_ID": "431924738418"
+  "GOOGLE_APP_ID": "1:730009823039:ios:0432d1f466dff405fcd58a",
+  "FIREBASE_PROJECT_ID": "roomdecorarfyp",
+  "GCM_SENDER_ID": "730009823039"
 }
