--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:431924738418:ios:372399436f398960c985eb",
-  "FIREBASE_PROJECT_ID": "roomdecordatabase-43368",
-  "GCM_SENDER_ID": "431924738418"
+  "GOOGLE_APP_ID": "1:730009823039:ios:fbc803f3adc8e832fcd58a",
+  "FIREBASE_PROJECT_ID": "roomdecorarfyp",
+  "GCM_SENDER_ID": "730009823039"
 }
