--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,17 @@ dependencies:
   firebase_database: ^10.4.6
   cloud_firestore: ^4.15.5
   molten_navigationbar_flutter: ^1.0.1
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
