--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   cloud_firestore: ^4.15.5
   molten_navigationbar_flutter: ^1.0.1
   file_picker: ^8.0.0+1
+  path_provider: ^2.1.3
+  flutter_cache_manager: ^3.3.1
 
 dev_dependencies:
   flutter_test:
