--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.9.22'
+    ext.kotlin_version = '1.9.25' // Use the latest Kotlin version here
     repositories {
         google()
         mavenCentral()
     }
-
     dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        
-        // classpath 'com.android.tools.build:gradle:4.1.0'
-         classpath 'com.google.gms:google-services:4.4.1'
     }
 }
-
 allprojects {
     repositories {
         google()
@@ -20,12 +16,12 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
+rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
-    project.evaluationDependsOn(':app')
+    project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
