--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   file_picker: ^8.0.0+1
   path_provider: ^2.1.3
   flutter_cache_manager: ^3.3.1
+  cached_network_image: ^3.3.1
+  ar_flutter_plugin: ^0.7.3
 
 dev_dependencies:
   flutter_test:
